--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
 <!--- trying with _includes for a pre-built graph --->
 {% include clickableSquares.html %}
 
+<!--- with Desmos provided embed option --->
+<iframe src="https://www.desmos.com/calculator/akll6mjqht?embed" width="400" height="400" style="border: 1px solid #ccc" frameborder=0></iframe>
+
 </body>
 </html>
