--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
 <!--- with Desmos provided embed option --->
 <iframe src="https://www.desmos.com/calculator/akll6mjqht?embed" width="400" height="400" style="border: 1px solid #ccc" frameborder=0></iframe>
 
+<div>
+  <script src="https://www.desmos.com/api/v1.11/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
+  <div id="calculator" style="width: 400px; height: 400px;"></div>
+  <script src="crossSectionDemo.js"></script>
+</div>
+
 </body>
 </html>
