--- a/index.html
+++ b/index.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <!---
+    from:
+    https://docs.mathjax.org/en/latest/web/start.html#using-mathjax-from-a-content-delivery-network-cdn
+    on 7/6/25
+  --->
+  <script type="text/javascript" id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
+</head>
+
 <body>
 
 <h1>Desmos Embed Test</h1>
-<!--- copied from firstTest.md --->
-<!--- trying for desmos to see what happens --->
-<script src="https://www.desmos.com/api/v1.9/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
-<div id="calculator" style="width: 400px; height: 400px;"></div>
-<script>
-  var elt = document.getElementById('calculator');
-  var calculator = Desmos.GraphingCalculator(elt);
-</script>
+<!---
+  Pulling out extraneous test content (remove later)
+  <!--- copied from firstTest.md --->
+  <!--- trying for desmos to see what happens --->
+  <script src="https://www.desmos.com/api/v1.9/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
+  <div id="calculator" style="width: 400px; height: 400px;"></div>
+  <script>
+    var elt = document.getElementById('calculator');
+    var calculator = Desmos.GraphingCalculator(elt);
+  </script>
+  
+  <!--- trying with _includes for a pre-built graph --->
+  {% include clickableSquares.html %}
+  
+  <!--- with Desmos provided embed option --->
+  <iframe src="https://www.desmos.com/calculator/akll6mjqht?embed" width="400" height="400" style="border: 1px solid #ccc" frameborder=0></iframe>
+--->
 
-<!--- trying with _includes for a pre-built graph --->
-{% include clickableSquares.html %}
-
-<!--- with Desmos provided embed option --->
-<iframe src="https://www.desmos.com/calculator/akll6mjqht?embed" width="400" height="400" style="border: 1px solid #ccc" frameborder=0></iframe>
-
+<div>
+  Trying out MathJax!
+  This graph allows you to manipulate a plane
+  using sliders for variables \(r\), \(\theta\) and \(\phi\).
+</div>
 <div>
   <script src="https://www.desmos.com/api/v1.11/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
   <div id="calculator" style="width: 400px; height: 400px;"></div>
