--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <h1>Desmos Embed Test</h1>
 <!---
   Pulling out extraneous test content (remove later)
-  <!--- copied from firstTest.md --->
-  <!--- trying for desmos to see what happens --->
+  <!~~~ copied from firstTest.md ~~~>
+  <!~~~ trying for desmos to see what happens ~~~>
   <script src="https://www.desmos.com/api/v1.9/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
   <div id="calculator" style="width: 400px; height: 400px;"></div>
   <script>
@@ -26,10 +26,10 @@
     var calculator = Desmos.GraphingCalculator(elt);
   </script>
   
-  <!--- trying with _includes for a pre-built graph --->
+  <!~~~ trying with _includes for a pre-built graph ~~~>
   {% include clickableSquares.html %}
   
-  <!--- with Desmos provided embed option --->
+  <!~~~ with Desmos provided embed option ~~~>
   <iframe src="https://www.desmos.com/calculator/akll6mjqht?embed" width="400" height="400" style="border: 1px solid #ccc" frameborder=0></iframe>
 --->
 
